--- a/index.html
+++ b/index.html
@@ -26,22 +26,26 @@
 <body>
     <header class=logo>
         <img src=img/logo.png class=img-responsive alt=Нигма>
+        <div class=header>ВАКАНСИЯ: БЕТА-ТЕСТЕРЫ НА 2021 ГОД</div>
+        <div class=subheader>ГОТОВЫ ЗАРАБАТЫВАТЬ МИНИМУМ $1000 В ДЕНЬ?</div>
     </header>
-    <div class=header>ВАКАНСИЯ: БЕТА-ТЕСТЕРЫ НА 2021 ГОД</div>
-    <div class=subheader>ГОТОВЫ ЗАРАБАТЫВАТЬ МИНИМУМ $1000 В ДЕНЬ?</div>
-
     <noscript><strong>We're sorry but Webpack App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
 
     <div class=video-block data-video=XkJjilQEP0w></div>
+    <div class="unity">
+        <div class=acceleration>В <span id=location>вашем регионе</span> осталось <span id=slots>3</span> свободных места</div>
 
-    <div class=acceleration>В <span id=location>вашем регионе</span> осталось <span id=slots>3</span> свободных места</div>
+        <div class=app data-ajax=true id=app data-butt=присоединиться data-type=1 data-email="" data-name="" data-target-geo=RU></div>
 
-    <div class=app data-ajax=true id=app data-butt=присоединиться data-type=1 data-email="" data-name="" data-target-geo=RU></div>
-    <div class=secure style=text-align:center;width:100%;>
-        <span class=trusted><img src=img/trusted-1.png class=img-responsive alt=" "></span>
-        <span class=trusted><img src=img/trusted-2.png class=img-responsive alt=" "></span>
-        <span class=trusted><img src=img/trusted-3.png class=img-responsive alt=" "></span>
+        <div class=secure>
+            <div class=trusted><img src=img/trusted-1.png class=img-responsive alt=""></div>
+            <div class=trusted><img src=img/trusted-2.png class=img-responsive alt=""></div>
+            <div class=trusted><img src=img/trusted-3.png class=img-responsive alt=""></div>
+            <div class=trusted><img src=img/trusted-4.png class=img-responsive alt=""></div>
+            <div class=trusted><img src=img/trusted-5.png class=img-responsive alt=""></div>
+        </div>
     </div>
+
 
     <footer style=text-align:center> <a href="javascript:void(0)" data-name="terms" class="alterlink">Пользовательское соглашение</a> | <a href="javascript:void(0)" data-name=policy class=alterlink>Политика конфиденциальности</a></footer>
     <script src=js/chunk-vendors.js></script>
