--- a/members.html
+++ b/members.html
@@ -20,10 +20,10 @@
     <link href=css/app.css rel=preload as=style>
     <link href=css/reboot.min.css rel=stylesheet />
     <link href=css/jquery.strange.css rel=stylesheet />
-    <link rel=stylesheet href=css/app.css>
+    <link href=css/app.css rel=stylesheet>
     <link href=css/style.css rel=stylesheet />
     <link href=css/clicks.css rel=stylesheet>
-    <link rel=manifest href=manifest.json/>
+    <link href=manifest.json rel=manifest>
 </head>
 
 <body>
@@ -34,20 +34,17 @@
             <span id="timer"><b>10</b>:<b>00</b>:<b>00</b></span>
         </div>
     </header>
-
     <div class=subheader>
         ДОБРО ПОЖАЛОВАТЬ В ПОЛЬЗОВАТЕЛЬСКУЮ ЗОНУ «НИГМА 2»
     </div>
     <div class=header>
         ПОЖАЛУЙСТА, ПОСМОТРИТЕ ВИДЕО, ЧТОБЫ УЗНАТЬ, ЧТО ДЕЛАТЬ ДАЛЬШЕ
     </div>
-
     <div class=video-block data-video=yElyeo5QLPg></div>
-
     <h2>Пожалуйста, зарегистрируйте <span>ВАШУ КОПИЮ «НИГМА 2»</span></h2>
-
     <div class=acceleration>В <span id=location>вашем регионе</span> осталось <span id=slots>3</span> свободных места</div>
     <div class=app data-url=/thankyou.html data-ajax=true id=app2 data-butt="Создайте свой аккаунт" data-type=2 data-email="" data-name="" data-target-geo=RU data-terms=true data-modal-thank=true></div>
+
     <div>
         <div>
             <div>
@@ -64,7 +61,7 @@
                                     <div class=profit>ВЫВЕЛ <span>$1547</span></div>
                                 </div>
                                 <div class=footer>
-                                    <div class="timer">Только что</div>
+                                    <div class=timer>Только что</div>
                                 </div>
                             </div>
                             <div class=item item-animation>
@@ -76,7 +73,7 @@
                                     <div class=profit>ВЫВЕЛ <span>$2178</span></div>
                                 </div>
                                 <div class=footer>
-                                    <div class="timer">Меньше 1 мин</div>
+                                    <div class=timer>Меньше 1 мин</div>
                                 </div>
                             </div>
                             <div class=item item-animation><input type=hidden value=2021-04-19 14:29:38>
@@ -446,56 +443,56 @@
             </div>
             <div class=col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2>
                 <div class=Faq id=accordion>
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
                         <span>Что такое «Нигма 2»?</span>
                     </div>
-                    <div id=collapse1 class="answer panel-collapse collapse">
+                    <div id="collapse1" class="answer panel-collapse collapse">
                         <div>
                             <p>«Нигма 2» - это трейдинговая программа, работающая на основе мета-кластеризующего алгоритма и созданная ведущими аналитиками и программистами, в том числе, Виктором Лавренко. Созданная в период валютного кризиса 2015 года,
                                 эта программа не только доказала способность приносить прибыль при любых валютных скачках, но и стала первой системой, открывающей только прибыльные сделки!</p>
                         </div>
                     </div>
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
                         <span>Сколько я смогу зарабатывать в день?</span>
                     </div>
-                    <div id=collapse2 class="answer panel-collapse collapse">
+                    <div id="collapse2" class="answer panel-collapse collapse">
                         <div>
                             <p>В настоящий момент пользователи программы «Нигма 2» зарабатывают от $5000 до $25000 в неделю, то есть от $1000 до $5000 в день.</p>
                         </div>
                     </div>
 
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
                         <span>Сколько заработали предыдущие бета-тестеры?</span>
                     </div>
-                    <div id=collapse3 class="answer panel-collapse collapse">
+                    <div id="collapse3" class="answer panel-collapse collapse">
                         <div>
                             <p>Когда мы запустили первый бета-тестинг в 2015 году, наши бета-тестеры зарабатывали от $500 до $2000 в день. Но это была первая версия «Нигмы». За это время мы улучшили систему.</p>
                             <p>Все бета-тестеры из первой группы на сегодняшний день являются миллионерами и с помощью системы «Нигма 2» зарабатывают от $50.000 до $200.000 в неделю.</p>
                         </div>
                     </div>
 
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
                         <span>Какой опыт и образование нужны, чтобы работать с «Нигма 2»?</span>
                     </div>
-                    <div id=collapse4 class="answer panel-collapse collapse">
+                    <div id="collapse4" class="answer panel-collapse collapse">
                         <div>
                             <p>Вам не нужны ни опыт, ни специальное образование. Работать с программой «Нигма 2» не сложнее, чем зарегистрировать e-mail или зайти в аккаунт во ВКонтакте или на Одноклассниках.</p>
                         </div>
                     </div>
 
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
                         <span>Какой процент успешных сделок открывает система «Нигма 2»?</span>
                     </div>
-                    <div id=collapse5 class="answer panel-collapse collapse">
+                    <div id="collapse5" class="answer panel-collapse collapse">
                         <div>
                             <p>С 2015 года, с момента запуска, программа не открыла ни одной убыточной сделки. </p>
                         </div>
                     </div>
 
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
                         <span>Из какой страны можно работать с этой программы?</span>
                     </div>
-                    <div id=collapse6 class="answer panel-collapse collapse">
+                    <div id="collapse6" class="answer panel-collapse collapse">
                         <div>
                             <p>
                                 Абсолютно из любой! В этом вся прелесть – вы можете запустить систему «Нигма 2» из любого уголка земного шара. Главное, чтобы у вас был интернет. Так что, даже когда вы путешествуете, программа продолжает зарабатывать вам деньги.
@@ -503,20 +500,20 @@
                         </div>
                     </div>
 
-                    <div class=question data-toggle="collapse" data-parent="#accordion" href="#collapse7">
+                    <div class="question" data-toggle="collapse" data-parent="#accordion" href="#collapse7">
                         <span>Сколько времени займет перечисление прибыли на мой счет?</span>
                     </div>
-                    <div id=collapse7 class="answer panel-collapse collapse">
+                    <div id="collapse7" class="answer panel-collapse collapse">
                         <div>
                             <p>Поскольку Nigma Ltd. оперирует крупными суммами переводов, у нас корпоративный уровень сотрудничества с большинством банков. Это значит, что в большинстве случаев ваши деньги поступят к вам на счет уже в течение 10 – 15 минут.
                                 В редких случаях (в том числе, если вы находитесь заграницей), перевод может поступить на следующий день. </p>
                         </div>
                     </div>
 
-                    <div class=question data-toggle="collapse" data-parent="#accorrdion" href="#collapse8">
+                    <div class="question" data-toggle="collapse" data-parent="#accorrdion" href="#collapse8">
                         <span>Как мне начать работать с программой «Нигма 2»?</span>
                     </div>
-                    <div id=collapse8 class="answer panel-collapse collapse">
+                    <div id="collapse8" class="answer panel-collapse collapse">
                         <div>
                             <p>
                                 Для этого вам нужно зарегистрировать и активировать бесплатную копию программу с помощью формы вверху страницы. Дальше, чтобы запустить программу, нужно будет только нажать кнопку «Начать авто-трейдинг». Тем не менее, сразу после регистрации вы получите
@@ -618,7 +615,6 @@
     <script src="js/popup.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/slidebars.js"></script>
-    <script src="js/zfunctions.js"></script>
     <script src="js/chunk-vendors.js"></script>
     <script src="js/app.js"></script>
     <script src="js/zfunctions.js"></script>
